<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/home_content_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        style="@style/single_line_divider"/>

    <RadioGroup
        android:id="@+id/home_rg"
        android:background="@color/public_white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_rb_home"
            style="@style/home_rb"
            android:checked="true"
            android:drawableTop="@drawable/tab_home_selector"
            android:text="@string/home_homepage"/>

        <RadioButton
            android:id="@+id/home_rb_des"
            style="@style/home_rb"
            android:drawableTop="@drawable/tab_des_selector"
            android:text="@string/home_des"/>

        <RadioButton
            android:id="@+id/home_rb_local"
            style="@style/home_rb"
            android:drawableTop="@drawable/tab_loc_selector"
            android:text="@string/home_loc_play"/>

        <RadioButton
            android:id="@+id/home_rb_my"
            style="@style/home_rb"
            android:drawableTop="@drawable/tab_my_selector"
            android:text="@string/home_my"/>

    </RadioGroup>

</LinearLayout>