<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
            android:background="#EEEEEE"
              android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_my_bc_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_my_head_layout"/>
        <ImageView
            android:id="@+id/fragment_my_head_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_my_default_photo"/>
        <TextView
            android:id="@+id/fragment_my_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#Fff"
            android:textSize="15sp"
            android:layout_toRightOf="@id/fragment_my_head_iv"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:text="@string/fragment_my_login"/>
        <TextView
            android:id="@+id/fragment_my_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_my_info"
            android:textColor="#fff"
            android:layout_below="@id/fragment_my_head_iv"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/ic_right_arrow_white"
            android:drawablePadding="5dp"
            android:layout_marginRight="20dp"/>



        <LinearLayout
            android:id="@+id/fragment_my_ll0"
            android:layout_width="match_parent"
            android:layout_below="@id/fragment_my_info_tv"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_my_three_shape"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragmemt_my_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/fragment_my_number1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="50dp"
                    android:drawableRight="@drawable/fragment_my_line_shape"
                    android:text="0"/>
                <TextView
                    android:id="@+id/fragment_my_number2"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:drawableRight="@drawable/fragment_my_line_shape"
                    android:layout_marginLeft="60dp"
                    android:textSize="18sp"
                    android:text="0"/>
                <TextView
                    android:id="@+id/fragment_my_number3"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/fragment_my_ll2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/fragmemt_my_order_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/fragment_my_subscribe"/>
                <TextView
                    android:id="@+id/fragmemt_my_collect_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="@string/fragment_my_collet"/>
                <TextView
                    android:id="@+id/fragmemt_my_ask_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/fragment_my_consult"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fragment_my_order_ll"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/fragment_my_three_shape"
            android:layout_below="@id/fragment_my_ll0"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#CACACB"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/fragment_my_order"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/fragment_my_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_my_order_ll"
            android:background="@drawable/fragment_my_three_shape"
            android:paddingBottom="10dp"
            android:layout_marginTop="1dp">
            <TextView
                android:id="@+id/fragment_my_all_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_my_all_order"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/ic_my_order"
                android:drawablePadding="8dp"/>
            <TextView
                android:id="@+id/fragment_my_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_my_pay"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_to_be_pay"/>
            <TextView
                android:id="@+id/fragment_my_drawback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:text="@string/fragment_my_drawback"
                android:layout_marginLeft="260dp"
                android:drawableTop="@drawable/ic_exchange"/>
        </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fragment_my_three_shape"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:layout_below="@id/fragment_my_rl">
                <ImageView
                    android:id="@+id/fragment_my_youhuijuan_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_coupon"/>
                <TextView
                    android:id="@+id/fragment_my_youhuijuan_tv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/fragment_my_youhuijuan"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@id/fragment_my_youhuijuan_iv"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:drawableRight="@drawable/ic_arrow_right"/>

                <View
                    android:id="@+id/fragment_my_view1"
                    style="@style/fragment_my_transverse_line"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@id/fragment_my_youhuijuan_tv"/>
                <ImageView
                    android:id="@+id/fragment_my_suggest_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@id/fragment_my_view1"
                    android:background="@drawable/ic_my_feedback"/>
                <TextView
                    android:id="@+id/fragment_my_suggest_tv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/fragment_my_suggest"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:layout_below="@+id/fragment_my_youhuijuan_tv"
                    android:layout_alignLeft="@+id/fragment_my_youhuijuan_tv"
                    android:layout_alignStart="@+id/fragment_my_youhuijuan_tv"/>
                <View
                    android:id="@+id/fragment_my_view2"
                    style="@style/fragment_my_transverse_line"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@id/fragment_my_suggest_tv"/>
                <ImageView
                    android:id="@+id/fragment_my_setting_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@id/fragment_my_view2"
                    android:background="@drawable/ic_my_setting"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:layout_toRightOf="@id/fragment_my_setting_iv"
                    android:text="@string/fragment_my_setting"
                    android:gravity="center_vertical"
                    android:layout_alignLeft="@+id/fragment_my_suggest_tv"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:layout_marginRight="15dp"
                    android:layout_below="@id/fragment_my_view2"/>
            </RelativeLayout>
    </RelativeLayout>
</ScrollView>