<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
       xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_below="@id/login_activity_rg"
                android:layout_height="match_parent"
                android:id="@+id/login_activity_rl_login"
       >

    <EditText
        android:id="@+id/login_activity_et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_rg"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:hint="@string/login_activity_mail"
        android:textColorHint="#A6E6CE"/>

    <View
        android:id="@+id/login_activity_view1"
        style="@style/login_activity_while_line"
        android:layout_below="@id/login_activity_et1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/login_activity_et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_view1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/login_activity_mima"
        android:textColorHint="#A6E6CE"/>

    <View
        android:id="@+id/login_activity_view2"
        style="@style/login_activity_while_line"
        android:layout_below="@id/login_activity_et2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/login_activity_forget_mima_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="忘记密码？"
        android:textColor="#Fff"/>

    <View
        android:id="@+id/login_activity_view3"
        style="@style/login_activity_while_line"
        android:layout_below="@id/login_activity_forget_mima_tv"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="160dp"/>

    <Button
        android:id="@+id/login_activity_login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_view3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_activity_loginbtn_bg"
        android:text="登录"
        android:textColor="#45C998"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/login_activity_phone_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_activity_phone_login"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/login_activity_three_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_phone_login_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login_activity_three_login"
        android:textColor="#Fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_three_login_tv"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:background="@drawable/ic_sso_weixin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/ic_sso_weibo"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/ic_sso_qq"/>
    </LinearLayout>
</RelativeLayout>